# TestSNAP-stdpar

./: CMakeLists.txt  README.md
src/: sna.cpp  sna.h  test_snap.cpp  test_snap.h
